Perbaikan jam saat pukul 23

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             else if(hours < 18){
                 p.innerHTML = 'Selamat sore aura!';
             }
-            else if(hours < 23){
+            else if(hours <= 23){
                 p.innerHTML = 'Selamat malam aura!';
             }
         }
