Mengubah font size clock nya

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
             flex-direction: column;
             background: #dac52c;
             border-radius: 100%;            
-        }               
+        }    
+        
+        .clockPanel {
+            font-size: 80px;
+        }
+
     </style>
 </head>
 <body>    
     <div class="centerDiv">
         <div class="lingkaran1">
-            <h1 id="clockPanel"></h1>
+            <h1 id="clockPanel" class="clockPanel"></h1>
             <p id="notif" style="font-size: 30px;"></p>    
         </div>
     </div>	
