--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     </style>
 </head>
-<body>    
+<body class="fade-in-toggle">    
     <div class="centerDiv">
         <div class="lingkaran1">
             <h1 id="clockPanel" class="clockPanel"></h1>
