--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <h1 id="clockPanel" class="clockPanel"></h1>
             <p id="notif" style="font-size: 40px;"></p>    
         </div>
+        <iframe style="visibility: hidden;" width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1781315529&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/m-afan-aris" title="M. Afan Aris" target="_blank" style="color: #cccccc; text-decoration: none;"></a> · <a href="https://soundcloud.com/m-afan-aris/aku-jeje-tenang" title="Aku Jeje - Tenang" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
     </div>	
     <script language="javascript" type="text/javascript">
         const clockPanel = document.getElementById("clockPanel");
@@ -97,6 +98,11 @@
                 body.style.backgroundImage = "url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/221808/sky.jpg')";                
             }
         }
+        document.body.addEventListener("click", function() {
+            let iframe = document.querySelector("iframe");
+            iframe.src = iframe.src; // Refresh iframe untuk memulai ulang
+        });
+
 
         setInterval(clock, 1000);
     </script>
