Tambah widget.play

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1 id="clockPanel" class="clockPanel"></h1>
             <p id="notif" style="font-size: 40px;"></p>    
         </div>
-        <iframe style="visibility: hidden;" width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1781315529&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/m-afan-aris" title="M. Afan Aris" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/m-afan-aris/aku-jeje-tenang" title="Aku Jeje - Tenang" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
+        <iframe id="soundcloud-player" style="visibility: hidden;" width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1781315529&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/m-afan-aris" title="M. Afan Aris" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/m-afan-aris/aku-jeje-tenang" title="Aku Jeje - Tenang" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
     </div>	
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <script language="javascript" type="text/javascript">
@@ -60,6 +60,8 @@
         const p = document.getElementById("notif");
         const body = document.body;
         body.style.backgroundSize = "cover";
+        var iframe = document.getElementById("soundcloud-player");
+        var widget = SC.Widget(iframe);
         const clock = () => {
             const date = new Date();
             let hours = date.getHours();
@@ -102,6 +104,7 @@
         }                
         document.body.addEventListener("click", function() {
             let KlikPlayButton = document.getElementById('KlikPlayButton');
+            widget.play();
             let iframe = document.querySelector("iframe");
             iframe.src = iframe.src; // Refresh iframe untuk memulai ulang
             KlikPlayButton.innerHTML = "";
