--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
             }
         }
 
+        @media screen and (max-width: 600px) { 
+            #notif {
+                font-size: 20px; /* Ukuran lebih kecil untuk layar kecil */
+                text-align: center; /* Pusatkan teks */
+                padding: 10px; /* Tambahkan ruang agar lebih rapi */
+            }
+        }
+
+        @media screen and (min-width: 601px) and (max-width: 1920px) { 
+            #notif {
+                font-size: 40px; /* Ukuran menengah untuk tablet */
+            }
+        }
+
     </style>
 </head>
 <body class="fade-in-toggle">    
@@ -51,7 +65,7 @@
         <div class="lingkaran1">
             <i id="KlikPlayButton">Klik satu kali sayang</i>
             <h1 id="clockPanel" class="clockPanel"></h1>
-            <p id="notif" style="font-size: 40px;"></p>    
+            <p id="notif"></p>    
         </div>
         <iframe id="soundcloud-player" style="visibility: hidden;" width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1781315529&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/m-afan-aris" title="M. Afan Aris" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/m-afan-aris/aku-jeje-tenang" title="Aku Jeje - Tenang" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
     </div>	
